--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
                 <div id="carouselExample" class="carousel slide">
                     <div class="timer">
                         <div class="time">
-                            <span class="min">2</span> <span class="count">20</span>
+                            <span class="min">2</span> <span class="count">10</span>
                         </div>
                     </div>
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
+                      <div class="carousel-item active fades">
                         <img class="d-block w-100" alt="">
                       </div>
-                      <div class="carousel-item">
+                      <div class="carousel-item fades">
                         <img class="d-block w-100" alt="">
                       </div>
-                      <div class="carousel-item">
+                      <div class="carousel-item fades">
                         <img class="d-block w-100" alt="">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden" onclick="currSlide(-1)">Previous</span>
+                      <span class="carousel-control-prev-icon" aria-hidden="true" onclick="currSlide(-1)"></span>
+                      <span class="visually-hidden" >Previous</span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden" onclick="currSlide(1)">Next</span>
+                      <span class="carousel-control-next-icon" aria-hidden="true" onclick="currSlide(1)"></span>
+                      <span class="visually-hidden">Next</span>
                     </button>
                   </div>
                   <div class="content">
