--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                         <img class="d-block w-100" alt="">
                       </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true" onclick="currSlide(-1)"></span>
                       <span class="visually-hidden" >Previous</span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true" onclick="currSlide(1)"></span>
                       <span class="visually-hidden">Next</span>
-                    </button>
+                    </button> -->
                   </div>
                   <div class="content">
                     <div class="para">
